--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_height="579dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
@@ -41,18 +41,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/display"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/leftArrow"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="moveLeft"
                 android:src="@drawable/left_arrow" />
@@ -60,7 +60,7 @@
             <ImageButton
                 android:id="@+id/rightArrow"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="moveRight"
                 app:srcCompat="@drawable/right_arrow" />
@@ -68,14 +68,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:gravity="end"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/openParaen"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/openParen" />
@@ -83,7 +83,7 @@
             <Button
                 android:id="@+id/closeParen"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/closeParen" />
@@ -91,7 +91,7 @@
             <Button
                 android:id="@+id/delete"
                 android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="removeFromExpression"
                 android:text="@string/deleteKey"
@@ -100,13 +100,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/sine"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/sine" />
@@ -114,7 +114,7 @@
             <Button
                 android:id="@+id/cosine"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/cosine" />
@@ -122,7 +122,7 @@
             <Button
                 android:id="@+id/tangent"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/tangent" />
@@ -130,13 +130,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/number1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar1"
@@ -146,7 +146,7 @@
             <Button
                 android:id="@+id/number2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar2" />
@@ -154,7 +154,7 @@
             <Button
                 android:id="@+id/number3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar3" />
@@ -162,7 +162,7 @@
             <Button
                 android:id="@+id/plus"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/plus" />
@@ -171,13 +171,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/number4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar4" />
@@ -185,7 +185,7 @@
             <Button
                 android:id="@+id/number5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar5" />
@@ -193,7 +193,7 @@
             <Button
                 android:id="@+id/number6"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar6" />
@@ -201,7 +201,7 @@
             <Button
                 android:id="@+id/minus"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/minus" />
@@ -209,7 +209,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:gravity="end"
             android:orientation="horizontal"
             tools:layout_editor_absoluteX="16dp"
@@ -218,7 +218,7 @@
             <Button
                 android:id="@+id/number7"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar7" />
@@ -226,7 +226,7 @@
             <Button
                 android:id="@+id/number8"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar8" />
@@ -234,7 +234,7 @@
             <Button
                 android:id="@+id/number9"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar9" />
@@ -242,7 +242,7 @@
             <Button
                 android:id="@+id/multiply"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/multiply" />
@@ -250,13 +250,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/number0"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/scalar0" />
@@ -264,7 +264,7 @@
             <Button
                 android:id="@+id/decimalPointButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/decimal_point" />
@@ -272,7 +272,7 @@
             <Button
                 android:id="@+id/raiseToPower"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/carrot" />
@@ -280,7 +280,7 @@
             <Button
                 android:id="@+id/divide"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="addToExpression"
                 android:text="@string/divide" />
@@ -289,13 +289,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150px"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/clear"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="clearExpression"
                 android:text="@string/clear" />
@@ -303,7 +303,7 @@
             <Button
                 android:id="@+id/enterButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:onClick="evaluate"
                 android:text="@string/enter" />
